--- a/main/CSS/style.css
+++ b/main/CSS/style.css
@@ -91,5 +91,38 @@ header {
     color: #666;
   }
   
+  /* Menu */
   
-  
+  .menu-icon {
+    cursor: pointer;
+}
+
+.menu {
+    display: none;
+    position: absolute; 
+    background-color: #f4f4f4;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 200px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-family: Arial, sans-serif;
+}
+
+.menu li {
+    padding: 15px 20px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    border: 1px solid #ccc;
+}
+
+.menu li:hover {
+    background-color: #e0e0e0;
+}
+
+
