--- a/main/CSS/style.css
+++ b/main/CSS/style.css
@@ -1,6 +1,3 @@
-/* Carrusel */
-
-
 header {
   position: fixed;
   background-color: white;
@@ -8,6 +5,15 @@ header {
   top: 0;
   margin-left: 0px;
   margin-right: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.logo{
+  display: flex;
+  width: 50px;
+  height: 50px;
 }
 
 .iconos {
@@ -22,6 +28,9 @@ header {
   width: 30px;
   height: 30px;
 }
+
+/* Carrusel */
+
 .carrusel {
     margin-top: 3%;
     width: 100%;
@@ -38,6 +47,8 @@ header {
   
   .botonAnterior {
     display: inline-block;
+    border: none;
+    cursor: pointer;
     background-color: #fff;
     border-radius: 5px;
     width: 100px;
@@ -46,6 +57,8 @@ header {
   .botonSiguiente {
     display: inline-block;
     position: absolute;
+    border: none;
+    cursor: pointer;
     right: 10px;
     background-color: #fff;
     border-radius: 5px;
@@ -126,3 +139,16 @@ header {
 }
 
 
+/*Footer*/
+.pie{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+  
+  height: 100px;
+}
+.pie img {
+  width: 5%;
+}
