--- a/main/CSS/style.css
+++ b/main/CSS/style.css
@@ -33,14 +33,14 @@ header {
 
 .carrusel {
     margin-top: 3%;
-    width: 100%;
+    width: 100vw;
     background-color: #666;
     height: 18.75rem;
     overflow: hidden;
   }
   
   .carrusel img {
-    width: 100%;
+    width: 100vw;
     height: 100%;
     object-fit: cover;
   }
@@ -145,9 +145,8 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  
-  
   height: 6.25rem;
+  width: 100%;
 }
 .pie img {
   width: 5%;
