--- a/CSS/style.css
+++ b/CSS/style.css
@@ -125,6 +125,7 @@ header {
     border-radius: 0.313rem;
     width: 12.5rem;
     box-shadow: 0 0.125rem 0.313rem rgba(0, 0, 0, 0.2);
+    outline: auto;
 }
 
 .menu ul {
